# CMakeList.txt: projekt CMake dla elementu 4.5, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (4.5 "4.5.c" "4.5.h" "matrix_utils.c" "matrix_utils.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
